# revalign-overhead

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_object.md
.github/workflows/: ci.yml
birdseye/: __init__.py  detect.py
examples/: README.md  add_an_object.md  custom_object.sh  pools_paradise_valley.sh
notebooks/: demo.ipynb
revalign_overhead/: __init__.py  __main__.py  detect.py
tests/: test_smoke.py
