[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revalign-overhead"
version = "0.1.0"
description = "Find any object in overhead satellite imagery and get a georeferenced CSV."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "RevAlign", email = "jordan@revalign.io" }]
keywords = [
    "satellite", "aerial", "remote-sensing", "object-detection", "geospatial",
    "computer-vision", "yolo", "vision-llm", "gis", "overhead-imagery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
yolo = ["ultralytics>=8.2", "huggingface_hub>=0.23"]

[project.urls]
Homepage = "https://revalign.io"
Repository = "https://github.com/RevAlign/revalign-overhead"

[project.scripts]
revalign-overhead = "revalign_overhead.detect:main"

[tool.setuptools.packages.find]
include = ["revalign_overhead*"]
